# stunning-dollop

./: .env.example  .pre-commit-config.yaml  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
app/: config.py  main.py
app/shared/cache/: redis_client.py
app/shared/db/: database.py
app/shared/db/alembic/: env.py
app/shared/logging/: logger.py  logging_config.py
docker/: .dockerignore  Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  entrypoint.sh
docker/monitoring/prometheus/: prometheus.yml
docker/nginx/: default.conf
