[project]
name = "stunning-dollop"
version = "0.1.0"
description = "FastAPI project"
requires-python = ">=3.12"

[tool.ruff]
line-length = 88
target-version = "py312"
output-format = "pylint"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "C4",
    "D",
]
ignore = ["E501", "B008"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]
"tests/*" = ["D100", "D101", "D102", "D103", "D104", "D105", "D106"]
"migrations/*" = ["D100", "D101", "D102", "D103", "D104"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-wrap-aliases = true
case-sensitive = true
split-on-trailing-comma = true

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_unused_ignores = true
ignore_missing_imports = true
strict_optional = true
disallow_untyped_defs = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "pydantic.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "pydantic_settings.*"
ignore_errors = true
